--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container{
+  width: 100%;
+  height: 100vh;
+}
 body{
-  font-family: sans-serif;
   background-color: #c3395b;
+  font-family: sans-serif;
 }
 .pomodoro{
   width: 600px;
@@ -57,6 +61,10 @@ header .btns{
   width: 350px;
   margin: 0px auto;
   justify-content: space-between;
+}
+.time .btns{
+  display: flex;
+  gap: 20px;
 }
 .time .btns button{
   cursor: pointer;
